# p2mc

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  codemeta.json  docker-compose.yml  model_card_generation_pipeline.py  pdf_handler.py  pyproject.toml  requirements.txt
backend/: .dockerignore  Dockerfile  __init__.py  config.py  model_card_generation_pipeline.py  pdf_handler.py  pyproject.toml  run_full_iteration.py  worker.py
backend/app/: main.py
backend/app/routers/: __init__.py  jobs.py  launchJobs.py
backend/app/schemas/: __init__.py  jobs.py
backend/extractors/: category_classifier.py  gemma_summarizer.py  gliner_dataset_extractor.py  gliner_extractor.py  gliner_metric_extractor.py  llama_dataset_extractor.py  llm_extractors.py  qwen_dataset_extractor.py  qwen_metric_extractor.py
backend/parsers/: extract_tables_lightonocr.py  lightocr_parser.py  scipdf_parser.py
backend/rabbitmq/: __init__.py  client.py
backend/resources/: tasks.json
backend/templates/: implementation_template_1.jsonld  template_1.jsonld
backend/testing_data/lightocr_jsons/: 1412.6575_lightonocr.json  1510.04935_lightonocr.json  1606.06357_lightonocr.json  1607.00653_lightonocr.json  1610.09369_lightonocr.json  1611.07308_lightonocr.json  1702.06879_lightonocr.json  1703.10316_lightonocr.json  1705.02426_lightonocr.json  1707.01476_lightonocr.json  1707.06690_lightonocr.json  1708.05027_lightonocr.json  1711.04071_lightonocr.json  1711.11231_lightonocr.json  1712.02121_lightonocr.json  1802.00543_lightonocr.json  1802.04394_lightonocr.json  1802.04407_lightonocr.json  1802.04868_lightonocr.json  1802.09691_lightonocr.json  1803.04311_lightonocr.json  1803.07828_lightonocr.json  1803.10459_lightonocr.json  1804.00891_lightonocr.json  1804.01882_lightonocr.json  1805.03352_lightonocr.json  1806.07297_lightonocr.json  1808.04122_lightonocr.json  1808.07018_lightonocr.json  1808.08644_lightonocr.json  1809.10851_lightonocr.json  1811.00839_lightonocr.json  (+134 more)
backend/tests/: TEST_README.md  conftest.py  test_test_setup.py
backend/utils/: XMLParser.py  category_mapper.py  evaluation_tools.py  task_matcher.py  uri_builder.py  uri_fetcher.py
frontend/: .dockerignore  Dockerfile  app.py  pyproject.toml
frontend/components/: job_status.py
frontend/pages/: jobs_page.py  main_page.py
frontend/services/: p2mc_api.py
utils/: XMLParser.py  (+3 more)
(+4896 files in other folders)
