[project]
name = "p2mc"
version = "0.1.0"
description = "A framework for the automatic generation of model cards from research papers"
authors = [
    {name = "eamadord",email = "elviamadordguez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (==4.15.0)",
    "evaluate (==0.4.6)",
    "gliner (==0.2.26)",
    "gliner2 (==1.3.1)",
    "joblib (==1.3.0)",
    "ollama (==0.6.2)",
    "pillow (==12.3.0)",
    "pypdfium2 (==5.12.0)",
    "rapidfuzz (==3.14.5)",
    "requests (==2.34.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
