[project]
name = "p2mc-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "SergioZSZ",email = "s.zaballosh@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11, <=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "lxml (>=6.1.1,<7.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "pypdfium2 (>=5.12.1,<6.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "scikit-learn (==1.5.0)",
    "torch (>=2.5,<3)",
    "transformers (==5.1.0)",
    "ollama (==0.6.2)",
    "gliner (==0.2.26)",
    "gliner2[local] (==1.3.1)",
    "accelerate (>=1.14.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fastapi[standard] (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "pika (>=1.4.1,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
evaluation = [
    "bert-score (>=0.3.13,<0.4.0)",
    "evaluate (>=0.4.6,<0.5.0)"
]
