[project]
name = "p2mc-frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "SergioZSZ",email = "s.zaballosh@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit (>=1.59.2,<2.0.0)",
    "pillow (>=12.3.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.22,<0.16.0)"
]
